# tello-x

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
scripts/: 00-quickstart.py  01-video.py  02-sensors.py  03-commands.py  04-apriltag.py  quickstart.py
tellox/: __init__.py  pilot.py  utils.py
