[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tellox"
version = "0.0.1"
description = "The easy way to control a DJI Tello drone."
readme = "README.md"
authors = [{ name = "Charles Dawson", email = "charles.dwsn@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Hardware",
    "Framework :: Robot Framework :: Library",
]
keywords = ["tello", "drone", "dji", "robotics", "control"]
dependencies = [
    "numpy",
    "opencv-python",
    "pandas",
    "djitellopy",
    "dt-apriltags",
    "matplotlib",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "flake8", "isort", "mypy", "pip-tools"]

[project.urls]
Homepage = "https://github.com/dawsonc/tello-x"
